objects/Journey_Detail__c.object
<CustomObject>
    <description>To track the flight details of the Booking</description>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <formula>DATEVALUE( Arrival_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrival_Station__c</fullName>
        <label>Arrival Station</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Journey Details</relationshipLabel>
        <relationshipName>Journey_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <formula>DATEVALUE( Departure_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Station__c</fullName>
        <label>Departure Station</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journey_Number__c</fullName>
        <label>Journey Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Number__c</fullName>
        <label>Leg Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR_No__c</fullName>
        <label>PNR No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Number__c</fullName>
        <label>Segment Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_number_of_cases__c</fullName>
        <label>Total number of cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Journey Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PNR_No__c</columns>
        <columns>Departure_Station__c</columns>
        <columns>Arrival_Station__c</columns>
        <columns>Departure_Time__c</columns>
        <columns>Arrival_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flight No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>